--- a/CódigoFuente/BitacorasProduccion/Views/BG_CentroCosto/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_CentroCosto/Create.cshtml
@@ -79,6 +79,20 @@
                                     @Html.ValidationMessageFor(model => model.num_centro_costo, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.class_1, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.EditorFor(model => model.class_1, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.class_1, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.class_2, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.EditorFor(model => model.class_2, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.class_2, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
                             <div class="ln_solid"></div>
                             <div class="form-group row">
                                 <span style="color:black"><b>RESPONSABLES</b></span>
