--- a/CódigoFuente/BitacorasProduccion/Views/BG_CentroCosto/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_CentroCosto/Enable.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Portal_2_0.Models.budget_centro_costo
 
 @{
-    ViewBag.Title = "Details Cost Center";
+    ViewBag.Title = "Enable Cost Center";
     ViewBag.PrimerNivel = "plantilla_budget";
     ViewBag.SegundoNivel = "BG_catalogos";
     ViewBag.TercelNivel = "BG_CentroCosto";
     ViewBag.ControllerName = "BG_CentroCosto";
 
     String responsables = (string.Join("/", Model.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
+
 }
 
 <div class="right_col" role="main">
@@ -24,8 +25,9 @@
                     </div>
 
                     <!-- /.col -->
-                    <div class="col-md-10">
+                    <div class="col-md-8">
                         <div class="table-responsive">
+                            <h3>¿Realmente desea habilitar este registro?</h3>
                             <table class="table">
                                 <tbody>
                                     <tr>
@@ -65,18 +67,25 @@
                                             }
                                         </td>
                                     </tr>
-
-
-
                                 </tbody>
                             </table>
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <p class="float-md-right">
+                        <p class="float-md-left">
                             <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = Model.id})" class="btn btn-success btm-sm" title="Editar">
                                 <i class="fa fa-pencil-square-o"></i> Editar
                             </a>
+                        </p>
+                        <p class="float-md-right">
+                            @using (Html.BeginForm())
+                            {
+                                @Html.AntiForgeryToken()
+
+                                <div class="form-actions no-color float-md-right">
+                                    <input type="submit" value="Habilitar" class="btn btn-warning btm-sm" />
+                                </div>
+                            }
                         </p>
                     </div>
                 </div>
@@ -90,7 +99,6 @@
         </div>
     </div>
 </div>
-
 <script>
     window.onload = function () {
         clicMenu(2);
